# kempner

./: .gitignore  README.md  README.org  pyproject.toml
doc/: ExpMath.org  bases.tex  chatgpt.org  claude.org  problem.org  schwartz_function.org  sloane-question.txt  sloane.org  talk.org  trefethen.org  vaaler.org
kempner/: __init__.py  baillie.py  basic.py  expand.py  filters.py  fourier.py  mollify.py  shanks.py
src/kempner/: __init__.py  baillie.py  basic.py  best.py  bump.py  expand.py  extra.py  figures.py  filters.py  fourier.py  futil.py  general.py  interpolate.py  majorization.py  oldbump.py  primezeta.py  series.py  timeit.py  util.py  vaaler.py
