[tool.poetry]
name = "kempner"
version = "0.1.0"
description = ""
authors = ["Victor S. Miller <victor.miller@sri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mpmath = "^1.3.0"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
sympy = "^1.13.3"
scipy = "^1.14.1"
joblib = "^1.4.2"
pywavelets = {git = "https://github.com/PyWavelets/pywt.git"}
pyprimesieve = {git = "http://github.com/jaredks/pyprimesieve.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
