[project]
name = "kempner"
version = "0.1.0"
description = ""
authors = [{ name = "Victor S. Miller", email = "victor.miller@sri.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=2.1.1,<3",
    "matplotlib>=3.9.2,<4",
    "sympy>=1.13.3,<2",
    "scipy>=1.14.1,<2",
    "joblib>=1.4.2,<2",
    "pywavelets",
    "pyprimesieve",
    "mpmath>=1.3.0",
]

[tool.uv]

[tool.uv.sources]
pywavelets = { git = "https://github.com/PyWavelets/pywt.git" }
pyprimesieve = { git = "http://github.com/jaredks/pyprimesieve.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
